--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -24,11 +24,12 @@
     </Toolbar>
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvCards"
         android:layout_width="match_parent"
-        android:layout_height="200dp"
+        android:layout_height="280dp"
+        android:layout_marginBottom="10dp"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        tools:listitem="@layout/holder_home_card"
-        android:layout_marginBottom="10dp"/>
+        tools:listitem="@layout/holder_home_card" />
     
     <LinearLayout
         android:layout_width="match_parent"
