--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,5 +4,6 @@
     <color name="white">#FFFFFFFF</color>
     <color name="color_primary">#0A2EFF</color>
     <color name="blue">#0A2EFF</color>
+    <color name="red">#FF0000</color>
     <color name="transparent">#0fff</color>
 </resources>
