--- a/app/src/main/res/navigation/graph_profile.xml
+++ b/app/src/main/res/navigation/graph_profile.xml
@@ -7,5 +7,12 @@
     <fragment
         android:id="@+id/profileFragment"
         android:name="com.example.cardemulator.fragments.main.profile.ProfileFragment"
-        android:label="ProfileFragment" />
+        android:label="ProfileFragment" >
+        <action
+            android:id="@+id/action_profileFragment_to_auth_graph"
+            app:destination="@id/auth_graph"
+            app:popUpTo="@+id/authFragment"
+            app:popUpToInclusive="true"/>
+    </fragment>
+    <include app:graph="@navigation/auth_graph" />
 </navigation>
