--- a/app/src/main/res/layout/fragment_cards.xml
+++ b/app/src/main/res/layout/fragment_cards.xml
@@ -23,6 +23,7 @@
     </Toolbar>
     
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvCards"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         tools:listitem="@layout/holder_home_card"/>
