--- a/app/src/main/res/layout/fragment_pay.xml
+++ b/app/src/main/res/layout/fragment_pay.xml
@@ -3,15 +3,73 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:gravity="center">
+    android:layout_height="match_parent">
 
-    <include layout="@layout/holder_home_card"/>
-
-    <com.example.base.base.view.ColorButton
+    <Toolbar
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:marginTop="20"
-        android:layout_marginHorizontal="20dp"/>
+        android:background="@color/blue">
+
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <ImageButton
+                android:id="@+id/ibBack"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_arrow_back"
+                android:background="@color/transparent"
+                app:tint="@color/white"
+                android:layout_gravity="center_vertical"/>
+
+            <com.google.android.material.textview.MaterialTextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                style="@style/DefaultTitleStyle"
+                android:text="Оплатить"
+                android:textColor="@color/white"
+                android:gravity="center"/>
+
+        </FrameLayout>
+
+    </Toolbar>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <include android:id="@+id/card" layout="@layout/holder_home_card"/>
+
+        <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/tvBalance"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            style="@style/DefaultTitleStyle"
+            android:layout_marginBottom="20dp"
+            android:layout_marginHorizontal="20dp"
+            android:gravity="center"
+            android:text="Баланс: "/>
+
+        <com.google.android.material.textview.MaterialTextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            style="@style/DefaultTitleStyle"
+            android:layout_marginBottom="20dp"
+            android:layout_marginHorizontal="20dp"
+            android:gravity="center"
+            android:text="Стоимость проезда: 36"/>
+
+        <com.example.base.base.view.ColorButton
+            android:id="@+id/bPay"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:marginTop="20"
+            app:button_text="Оплатить"
+            android:layout_marginHorizontal="20dp"/>
+
+    </LinearLayout>
+
 
 </LinearLayout>
